--- a/app/static/echarts-render.html
+++ b/app/static/echarts-render.html
@@ -23,7 +23,7 @@
       --shadow-strong:0 8px 24px rgba(0,0,0,0.18);
     }
     [data-theme="dark"]{
-      --bg-:#1f2937;
+      --bg-:#1f293700;
       --border-color:#374151;
       --text-primary:#f3f4f6;
       --text-:#9ca3af;
@@ -140,6 +140,7 @@
       max-height: 60vh;
       overflow: auto;
       background: var(--bg-);
+      backdrop-filter: blur(5px) saturate(120%);
       border: 1px solid var(--border-color);
       border-radius: 12px;
       box-shadow: var(--shadow-strong);
