--- a/app/static/echarts-render.html
+++ b/app/static/echarts-render.html
@@ -11,7 +11,7 @@
 
     /* 主题变量（用于轴开关的外观与暗色模式一致） */
     :root{
-      --bg-:#ffffff;
+      --bg-bubble:#ffffff;
       --border-color:#e5e7eb;
       --text-primary:#1f2937;
       --text-:#6b7280;
@@ -23,7 +23,7 @@
       --shadow-strong:0 8px 24px rgba(0,0,0,0.18);
     }
     [data-theme="dark"]{
-      --bg-:#1f293700;
+      --bg-bubble:#1f293700;
       --border-color:#374151;
       --text-primary:#f3f4f6;
       --text-:#9ca3af;
@@ -110,7 +110,7 @@
     .fit-buttons .btn{
       appearance: none;
       border: 1px solid var(--border-color);
-      background: var(--bg-);
+      background: var(--bg-bubble);
       color: var(--text-primary);
       font-size: 12px;
       font-weight: 700;
@@ -139,7 +139,7 @@
       max-width: 420px;
       max-height: 60vh;
       overflow: auto;
-      background: var(--bg-);
+      background: var(--bg-bubble);
       backdrop-filter: blur(5px) saturate(120%);
       border: 1px solid var(--border-color);
       border-radius: 12px;
