--- a/app/static/echarts-render.html
+++ b/app/static/echarts-render.html
@@ -140,7 +140,7 @@
       max-height: 60vh;
       overflow: auto;
       background: var(--bg-bubble);
-      backdrop-filter: blur(5px) saturate(120%);
+      backdrop-filter: blur(4px) saturate(120%);
       border: 1px solid var(--border-color);
       border-radius: 12px;
       box-shadow: var(--shadow-strong);
@@ -148,7 +148,7 @@
       cursor: grab; 
       touch-action: none;
     }
-    .fit-bubble.dragging{          /* NEW: 正在拖拽时的视觉反馈 */
+    .fit-bubble.dragging{          
       cursor: grabbing;
     }
     .fit-bubble .head{
