--- a/app/static/echarts-render.html
+++ b/app/static/echarts-render.html
@@ -195,7 +195,7 @@
     /* 可拖指针（带矩形把手 + 向下箭头） */
     .fit-pointer{
       position: absolute;
-      z-index: 2147483644;
+      z-index: 1000;
       visibility: hidden;
       pointer-events: none;
     }
@@ -609,7 +609,7 @@
       axisName:  dark ? '#9ca3af' : '#6b7280',
       axisLine:  dark ? '#374151' : '#e5e7eb',
       gridLine:  dark ? 'rgba(255,255,255,0.10)' : 'rgba(0,0,0,0.08)',
-      tooltipBg: dark ? 'rgba(17,24,39,0.97)' : 'rgba(255,255,255,0.98)',
+      tooltipBg: dark ? 'var(--bg-bubble)' : 'rgba(255,255,255,0.98)',
       tooltipBorder: dark ? '#374151' : '#e5e7eb',
       tooltipText: dark ? '#f3f4f6' : '#1f2937',
       tooltipShadow: dark ? '0 6px 20px rgba(0,0,0,0.35)' : '0 6px 20px rgba(0,0,0,0.12)',
@@ -703,8 +703,7 @@
     return { series, xMin: Math.max(minX - pad, 0), xMax: maxX + pad, yMax: Math.ceil(maxAir * 1.4) };
   }
 
-  // REPLACE: 构建 option，x 轴最小值与 dataZoom 起点强制 > 0；
-  function buildOption(payload) {
+function buildOption(payload) {
     const { chartData, theme } = payload || {};
     const t = tokens(theme||'light');
     const sList = Array.isArray(chartData?.series) ? chartData.series : [];
@@ -730,6 +729,7 @@
         tooltip:{ show:false, triggerOn:'none' }
       };
     }
+
 
     const built = buildSeries(sList, xMode);
 
@@ -831,7 +831,39 @@
       });
     }
 
-    const xMinForAxis = Math.max(X_MIN_CLAMP, built.xMin);
+    // 计算并取整 X 轴最小/最大值
+    const rawMin = Math.max(X_MIN_CLAMP, built.xMin);
+    const rawMax = built.xMax * 1.2;
+    let xMinForAxis = Math.floor(rawMin);
+    let xMaxForAxis = Math.ceil(rawMax);
+    if (!(xMaxForAxis > xMinForAxis)) xMaxForAxis = xMinForAxis + 1; // 保证区间有效
+
+    // 条件化 toolbox 的功能项：窄屏隐藏 dataZoom 与 restore
+    const toolboxFeatures = isNarrow ? {
+      restore: {},
+      saveAsImage: { backgroundColor: exportBg, pixelRatio: window.devicePixelRatio || 1 },
+      myFullscreen: {
+        show: true,
+        title: !!document.fullscreenElement ? '退出全屏' : '全屏查看',
+        icon: !!document.fullscreenElement
+          ? 'path://M3 7v7h7M3 14l7-7M21 17v-7h-7M21 10l-7 7'
+          : 'path://M3 10v-7h7M3 3l7 7M21 14v7h-7M21 21l-7-7',
+        onclick: () => toggleFullscreen()
+      }
+    } : {
+      dataZoom: { yAxisIndex: 'none' },
+      restore: {},
+      saveAsImage: { backgroundColor: exportBg, pixelRatio: window.devicePixelRatio || 1 },
+      myFullscreen: {
+        show: true,
+        title: !!document.fullscreenElement ? '退出全屏' : '全屏查看',
+        icon: !!document.fullscreenElement
+          ? 'path://M3 7v7h7M3 14l7-7M21 17v-7h-7M21 10l-7 7'
+          : 'path://M3 10v-7h7M3 3l7 7M21 14v7h-7M21 21l-7-7',
+        onclick: () => toggleFullscreen()
+      }
+    };
+
     return {
       __empty:false,
       __titlePrefix:titlePrefix,
@@ -859,7 +891,7 @@
         axisLine:{ lineStyle:{ color:t.axisLine }},
         splitLine:{ show:true, lineStyle:{ color:t.gridLine }},
         min: xMinForAxis,
-        max: built.xMax * 1.2
+        max: xMaxForAxis
       },
       yAxis:{
         type:'value', name:'风量(CFM)', min:0, max: built.yMax * 1.3,
@@ -869,12 +901,20 @@
       },
 
       tooltip:{
+        appendToBody: true,
         axisPointer: { type: "cross", label: { color: t.tooltipText } },
         trigger:'item',
         backgroundColor:t.tooltipBg,
         borderColor:t.tooltipBorder,
+        borderWidth: 1,
+        borderRadius: 12,
         textStyle:{ color:t.tooltipText },
-        extraCssText:`box-shadow:${t.tooltipShadow};`,
+        extraCssText: `
+          backdrop-filter: blur(4px) saturate(120%);
+          -webkit-backdrop-filter: blur(4px) saturate(120%);
+          box-shadow: ${t.tooltipShadow};
+          z-index: 1000000;
+        `,
         formatter:function(p){
           const xModeNow = currentXModeFromPayload(lastPayload);
           const xLabel = xModeNow==='rpm' ? 'RPM, ' : 'dB, ';
@@ -888,21 +928,11 @@
 
       toolbox:{
         top: -5, right: 0,
-        feature:{
-          dataZoom:{ yAxisIndex:'none' },
-          restore:{},
-          saveAsImage:{ backgroundColor:exportBg, pixelRatio: window.devicePixelRatio || 1 },
-          myFullscreen: {
-            show: true,
-            title: !!document.fullscreenElement ? '退出全屏' : '全屏查看',
-            icon: !!document.fullscreenElement ? 'path://M3 7v7h7M3 14l7-7M21 17v-7h-7M21 10l-7 7' : 'path://M3 10v-7h7M3 3l7 7M21 14v7h-7M21 21l-7-7',
-            onclick: () => toggleFullscreen()
-          }
-        }
+        feature:toolboxFeatures
       },
 
       dataZoom: [
-        { type: 'inside', xAxisIndex: 0, throttle: 50, zoomOnMouseWheel: true, moveOnMouseWheel: true, moveOnMouseMove: true ,filterMode: "none", startValue: xMinForAxis, endValue: built.xMax },
+        { type: 'inside', xAxisIndex: 0, throttle: 50, zoomOnMouseWheel: true, moveOnMouseWheel: true, moveOnMouseMove: true ,filterMode: "none", startValue: xMinForAxis, endValue: xMaxForAxis*0.85 },
         { type: 'inside', yAxisIndex: 0, throttle: 50, zoomOnMouseWheel: 'alt', moveOnMouseWheel: 'alt', moveOnMouseMove: true ,filterMode: "none", endValue: built.yMax}
       ],
 
