侧栏自动高度计算修复

--- a/app/static/echarts-render.html
+++ b/app/static/echarts-render.html
@@ -35,7 +35,7 @@
       --shadow-strong:0 8px 24px rgba(0,0,0,0.45);
     }
 
-    /*x轴切换开关*/
+    /*x轴切换开关
     .chart-xaxis-overlay{
       position:absolute;
       z-index:2147483641;
@@ -96,7 +96,7 @@
     .switch-track,
     .switch-slider {
       touch-action: none;
-    }
+    }*/
 
     /* 右下角按钮组（按钮式开关） */
     .fit-buttons{
